priorities added